<resources>
    <string name="app_name">SITO</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan maximus condimentum. Donec bibendum blandit tempus. Nullam vehicula vel mi id auctor. Proin eu turpis consequat, tincidunt lectus ut, pharetra tellus. Praesent egestas dolor ligula, sed vehicula orci iaculis quis. Nulla facilisi. Etiam eu ligula sed mauris tincidunt consequat eget sed orci. Nulla id pulvinar est, ut dignissim nulla. Cras sit amet ligula eget nisl gravida aliquet.</string>

    <string-array name="intro_slider_heading">
        <item>Head One</item>
        <item>Head Two</item>
        <item>Head Three</item>
    </string-array>

    <string-array name="intro_slider_description">
        <item>@string/lorem_ipsum</item>
        <item>@string/lorem_ipsum</item>
        <item>@string/lorem_ipsum</item>
    </string-array>
    <string name="heading">Heading</string>
    <string name="intro_skip">Пропустить</string>
    <string name="next_intro">NEXT</string>
    <string name="back_intro">BACK</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="sex_id">Пол</string>
    <string name="brands">Брэнд</string>
    <string name="categories">Категории</string>
    <string name="sizes">Размер</string>
    <string name="colors">Цвет</string>
    <string name="prices">Цена</string>
    <string name="sales">Скидка</string>

    <string name="title_home">Главная</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_cart">Избранное</string>
    <string name="title_personal_account">Профиль</string>
    <string name="title_notifications">Уведомления</string>
    <string name="microphone">micro</string>
    <string name="remove">remove</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="sito_main">Sito - место выгодных скидок.</string>
    <string name="sito_description">Мы ищем товары с большой скидкой и публикуем здесь.</string>
    <string name="men">Мужское</string>
    <string name="women">Женское</string>
    <string name="boots">Кроссовки от 30%</string>
    <string name="main_favourite">Избранное</string>
    <string name="head_form">Нет скидки на интересующий товар?</string>
    <string name="descr_form">Заполните форму, мы отправим уведомление когда товар появится</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_sex">Ваш пол</string>
    <string name="category">Категория</string>
    <string name="brand">Бренд</string>
    <string name="your_size">Размер</string>
    <string name="your_e_mail">Ваш e-mail</string>
    <string name="okey_person_data">Согласен на обработку персональных данных</string>
    <string name="say_me">Уведомить</string>
    <string name="edit">edit</string>
    <string name="rub">RUB</string>
    <string name="search_hint">Поиск</string>
    <string name="def_title">Title</string>
    <string name="def_brand">Brand</string>
    <string name="def_description">Description</string>
    <string name="title_color">Цвет:</string>
    <string name="def_color">Color</string>
    <string name="title_size">Размер:</string>
    <string name="def_size">Size</string>
    <string name="def_rub">RUB</string>
    <string name="def_price">Price</string>
    <string name="def_sale">Sale</string>
    <string name="def_oldprice">OldPrice</string>
    <string name="delete">Удалить</string>
    <string name="title_sale">Скидка</string>
    <string name="sroting">Сортировка</string>
    <string name="filter">Фильтр</string>
    <string name="settings">Settings</string>

    <string-array name="arrayListViewUnisex">
        <item>Футболки, майки и топы</item>
        <item>Рубашки и блузы</item>
        <item>Толстовки и свитеры</item>
        <item>Костюмы, пиджаки и жакеты</item>
        <item>Джинсы и одежда из денима</item>
        <item>Брюки и леггинсы</item>
        <item>Шорты</item>
        <item>Платья и сарафаны</item>
        <item>Юбки</item>
        <item>Куртки</item>
        <item>Пальто, шубы и дубленки</item>
        <item>Спорт</item>
        <item>Нижнее белье и боди</item>
        <item>Комбенизоны</item>
        <item>Обувь (прочее)</item>
        <item>Кеды и кроссовки</item>
        <item>Ботинки и сапоги</item>
        <item>Туфли</item>
        <item>Лоферы</item>
        <item>Летняя обувь</item>
        <item>Без категории</item>
        <item>Сумки и рюкзаки</item>
        <item>Кошельки и визитницы</item>
        <item>Косметички</item>
        <item>Головные уборы</item>
        <item>Шарфы и платки</item>
        <item>Перчатки и варежки</item>
        <item>Украшения и часы</item>
        <item>Очки</item>
        <item>Ремни</item>
        <item>Галстуки и бабочки</item>
        <item>Зонты</item>
    </string-array>

    <string-array name="arrayListViewMen">
        <item>Одежда (прочее)</item>
        <item>Футболки и поло</item>
        <item>Рубашки</item>
        <item>Толстовки и свитеры</item>
        <item>Костюмы и пиджаки</item>
        <item>Джинсы и одежда из денима</item>
        <item>Брюки и чиносы</item>
        <item>Шорты</item>
        <item>Куртки</item>
        <item>Пальто</item>
        <item>Спорт</item>
        <item>Нижнее белье и носки</item>
        <item>Обувь (прочее)</item>
        <item>Кеды и кроссовки</item>
        <item>Ботинки и сапоги</item>
        <item>Туфли</item>
        <item>Лоферы и мокасины</item>
        <item>Летняя обувь</item>
        <item>Без категории</item>
        <item>Сумки и рюкзаки</item>
        <item>Сумки и рюкзаки</item>
        <item>Кошельки и визитницы</item>
        <item>Головные уборы</item>
        <item>Шарфы и платки</item>
        <item>Перчатки и варежки</item>
        <item>Украшения и часы</item>
        <item>Очки</item>
        <item>Ремни</item>
        <item>Галстуки и бабочки</item>
        <item>Зонты</item>
    </string-array>

    <string-array name="arrayListViewWomen">
        <item>Одежда (прочее)</item>
        <item>Футболки, майки и топы</item>
        <item>Рубашки и блузы</item>
        <item>Толстовки и свитеры</item>
        <item>Костюмы, пиджаки и жакеты</item>
        <item>Джинсы и одежда из денима</item>
        <item>Брюки и леггинсы</item>
        <item>Шорты</item>
        <item>Платья и сарафаны</item>
        <item>Юбки</item>
        <item>Куртки</item>
        <item>Пальто, шубы и дубленки</item>
        <item>Спорт</item>
        <item>Нижнее белье и боди</item>
        <item>Комбенизоны</item>
        <item>Обувь (прочее)</item>
        <item>Кеды и кроссовки</item>
        <item>Ботинки и сапоги</item>
        <item>Туфли</item>
        <item>Лоферы</item>
        <item>Летняя обувь</item>
        <item>Без категории</item>
        <item>Сумки и рюкзаки</item>
        <item>Кошельки и визитницы</item>
        <item>Косметички</item>
        <item>Головные уборы</item>
        <item>Шарфы и платки</item>
        <item>Перчатки и варежки</item>
        <item>Украшения и часы</item>
        <item>Очки</item>
        <item>Ремни</item>
        <item>Зонты</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
