<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
       />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_catalog"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_cart"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


</menu>
