<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

 >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewRecCartProduct"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/intro_ico_2" />

        <TextView
            android:id="@+id/textViewRecCartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/def_title"
            app:layout_constraintBottom_toTopOf="@+id/textViewRecCartDescription"
            app:layout_constraintStart_toEndOf="@+id/imageViewRecCartProduct"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRecCartDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/def_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewRecCartProduct"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecCartTitle" />

        <TextView
            android:id="@+id/textViewRecCartRUBPr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/def_rub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRecCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/def_price"
            app:layout_constraintEnd_toStartOf="@+id/textViewRecCartRUBPr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRecCartSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/def_sale"
            app:layout_constraintBottom_toTopOf="@+id/buttonRecCartDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecCartRUBPr" />

        <TextView
            android:id="@+id/textViewRecCartRUB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/def_rub"
            app:layout_constraintEnd_toStartOf="@+id/textViewRecCartSale"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecCartPrice" />

        <TextView
            android:id="@+id/textViewRecCartOldPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/def_oldprice"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/textViewRecCartRUB"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecCartPrice" />

        <Button
            android:id="@+id/buttonRecCartDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/delete"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecCartSale" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>


